--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,16 +4,27 @@ on:
     branches:
        - main
        - dev
- 
-  schedule:
-     - cron: '*/5 * * * *'
   workflow_dispatch:
 jobs:
-  job1:
+  build-job:
    runs-on: ubuntu-latest
    steps:
      - name: task 1 for printing OS details
        run: uname -a
      - name: task 2 to print hostname
        run: hostname
-      
+     - name: step 3
+       run: sleep 30
+     - name: step 4
+       run: echo "buildjob and step4 of build-job1 completed"
+  test-job:
+   runs-on: ubuntu-latest
+   steps:
+     - name: task 1 for printing OS details
+       run: uname -a
+     - name: task 2 to print hostname
+       run: hostname
+     - name: step 3
+       run: sleep 30
+     - name: step 4
+       run: echo " testjob and step4 of test-job1 completed"
