--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
      branches:
       - main
-  
+env:
+ USER1: leenavar
 jobs:
  build:
     runs-on: ubuntu-latest
@@ -18,4 +19,5 @@ jobs:
         run: |
          ls -l
          echo "github repo name is ${{GITHUB.REPOSITIORY}} and branch name is ${{ GITHUB.REF_NAME}}"
+         echo "value for variable user1 is $USER1"
          pwd
