--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -1,23 +1,38 @@
 name: workflow2
-
-on:
+on: 
   push:
     branches:
-       - main
+      - main
   pull_request:
-     branches:
+    branches:
       - main
 env:
- USER1: leenavar
+  USER1: Leena
 jobs:
- build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4.1.1
-      - name: step 2
-        run: |
-         ls -l
-         echo "github repo name is ${{GITHUB.REPOSITIORY}} and branch name is ${{ GITHUB.REF_NAME}}"
-         echo "value for variable user1 is $USER1"
-         pwd
+  build:
+     env:
+       USER2: Muniswamy
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v4.1.1
+       - name: step 2
+         env:
+           user3: lbm
+         run: |
+          ls -l
+          echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
+          echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
+          pwd
+          java -version
+       - run: echo " Print value of user 3 $user3"
+  test:
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v4.1.1
+       - name: step 2
+         run: |
+          ls -l
+          echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
+          echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
