--- a/.github/workflows/PriorityUnderstand.yml
+++ b/.github/workflows/PriorityUnderstand.yml
@@ -24,6 +24,7 @@ jobs:
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
+          echo "Value for variable user1, and server name are ${{ vars.user1}} and ${{ vars.server_name }}"
           pwd
           java -version
        - run: echo " Print value of user 3 $user3"
