--- a/.github/workflows/diffenv.yml
+++ b/.github/workflows/diffenv.yml
@@ -11,8 +11,10 @@ env:
   USER1: leena
 jobs:
   build:
+     environment: dev
      env:
-       USER2: muniswamy
+       USER2: leena1
+       USER1: leena_job
      runs-on: ubuntu-latest
      steps:
        - name: Checkout
@@ -20,15 +22,28 @@ jobs:
        - name: step 2
          env:
            user3: lbm
+           USER1: leena_step
          run: |
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
-          echo "Value for variable user1, and server name are ${{ vars.user1}} and ${{ vars.server_name }}"
+          echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           pwd
           java -version
        - run: echo " Print value of user 3 $user3"
   test:
+     runs-on: ubuntu-latest
+     environment: prod
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v4.1.1
+       - name: step 2
+         run: |
+          ls -l
+          echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
+          echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
+
+  deploy:
      runs-on: ubuntu-latest
      steps:
        - name: Checkout
@@ -37,4 +52,4 @@ jobs:
          run: |
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
-          echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
+          echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
