--- a/.github/workflows/Secrets.yml
+++ b/.github/workflows/Secrets.yml
@@ -8,31 +8,33 @@ on:
     branches:
       - main
 env:
-  USER1: leena
+  USER1: gagandeep
 jobs:
   build:
      environment: dev
      env:
-       USER2: leena1
-       USER1: leena_job
-     runs-on: ubuntu-latest
+       USER2: sandeep
+       USER1: sandeep_job
+     runs-on: gagan-devops
      steps:
        - name: Checkout
          uses: actions/checkout@v4.1.1
        - name: step 2
          env:
-           user3: lbm
-           USER1: leena_step
+           user3: ajit
+           USER1: sandeep_step
          run: |
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
+          echo "password for env is ${{ secrets.token1 }} "
+          echo " ${{ secrets.token1 }} " >> /tmp/gagan-pass
           pwd
           java -version
        - run: echo " Print value of user 3 $user3"
   test:
-     runs-on: ubuntu-latest
+     runs-on: gagan-devops
      environment: prod
      steps:
        - name: Checkout
@@ -42,9 +44,10 @@ jobs:
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
-
+          echo "password for env is ${{ secrets.token1 }} "
+          echo " ${{ secrets.token1 }} " >> /tmp/gagan-pass
   deploy:
-     runs-on: ubuntu-latest
+     runs-on: gagan-devops
      steps:
        - name: Checkout
          uses: actions/checkout@v4.1.1
@@ -53,3 +56,6 @@ jobs:
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
+          echo "password for env is ${{ secrets.token_repo }} "
+          echo " ${{ secrets.token_repo }} " >> /tmp/gagan-pass
+          cat /tmp/gagan-pass
