--- a/.github/workflows/Secrets.yml
+++ b/.github/workflows/Secrets.yml
@@ -8,28 +8,28 @@ on:
     branches:
       - main
 env:
-  USER1: gagandeep
+  USER1: leena
 jobs:
   build:
      environment: dev
      env:
-       USER2: sandeep
-       USER1: sandeep_job
-     runs-on: gagan-devops
+       USER2: Muniswmay
+       USER1: leena_job
+     runs-on: leena-devops
      steps:
        - name: Checkout
          uses: actions/checkout@v4.1.1
        - name: step 2
          env:
            user3: ajit
-           USER1: sandeep_step
+           USER1: leena_step
          run: |
           ls -l
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo "Value for variable user1, user2 and user3 are $USER1 $USER2 $user3"
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           echo "password for env is ${{ secrets.token1 }} "
-          echo " ${{ secrets.token1 }} " >> /tmp/gagan-pass
+          echo " ${{ secrets.token1 }} " >> /tmp/leena-pass
           pwd
           java -version
        - run: echo " Print value of user 3 $user3"
@@ -45,9 +45,9 @@ jobs:
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           echo "password for env is ${{ secrets.token1 }} "
-          echo " ${{ secrets.token1 }} " >> /tmp/gagan-pass
+          echo " ${{ secrets.token1 }} " >> /tmp/leena-pass
   deploy:
-     runs-on: gagan-devops
+     runs-on: leena-devops
      steps:
        - name: Checkout
          uses: actions/checkout@v4.1.1
@@ -57,5 +57,5 @@ jobs:
           echo "github repo name is ${{ GITHUB.REPOSITORY }} and branch name is ${{ GITHUB.REF_NAME }} "
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           echo "password for env is ${{ secrets.token_repo }} "
-          echo " ${{ secrets.token_repo }} " >> /tmp/gagan-pass
-          cat /tmp/gagan-pass
+          echo " ${{ secrets.token_repo }} " >> /tmp/leena-pass
+          cat /tmp/leena-pass
