--- a/.github/workflows/Secrets.yml
+++ b/.github/workflows/Secrets.yml
@@ -21,7 +21,7 @@ jobs:
          uses: actions/checkout@v4.1.1
        - name: step 2
          env:
-           user3: ajit
+           user3: lbm
            USER1: leena_step
          run: |
           ls -l
@@ -34,7 +34,7 @@ jobs:
           java -version
        - run: echo " Print value of user 3 $user3"
   test:
-     runs-on: gagan-devops
+     runs-on: leena-devops
      environment: prod
      steps:
        - name: Checkout
