conditional_run.yml

--- a/.github/workflows/Secrets.yml
+++ b/.github/workflows/Secrets.yml
@@ -1,5 +1,3 @@
-name: workflow2
-
 on: 
   push:
     branches:
@@ -13,7 +11,7 @@ jobs:
   build:
      environment: dev
      env:
-       USER2: Muniswmay
+       USER2: Muniswamy
        USER1: leena_job
      runs-on: leena-devops
      steps:
@@ -32,6 +30,7 @@ jobs:
           echo " ${{ secrets.token1 }} " >> /tmp/leena-pass
           pwd
           java -version
+         if: github.event_name == 'pull_request'
        - run: echo " Print value of user 3 $user3"
   test:
      runs-on: leena-devops
@@ -58,4 +57,4 @@ jobs:
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           echo "password for env is ${{ secrets.token_repo }} "
           echo " ${{ secrets.token_repo }} " >> /tmp/leena-pass
-          cat /tmp/leena-pass
+          cat /tmp/gagan-pass
