--- a/.github/workflows/Secrets.yml
+++ b/.github/workflows/Secrets.yml
@@ -57,4 +57,4 @@ jobs:
           echo " Value for user1 and servername are ${{ vars.user1 }} and ${{ vars.server_name }}"
           echo "password for env is ${{ secrets.token_repo }} "
           echo " ${{ secrets.token_repo }} " >> /tmp/leena-pass
-          cat /tmp/gagan-pass
+          cat /tmp/leena-pass
