Update and rename conditional_run2.yml to conditional_run2job.yml

--- a/.github/workflows/conditional_run2job.yml
+++ b/.github/workflows/conditional_run2job.yml
@@ -34,6 +34,7 @@ jobs:
        - run: echo " Print value of user 3 $user3"
   test:
      runs-on: leena-devops
+     if: github.event_name == 'pull_request'
      environment: prod
      steps:
        - name: Checkout
