--- a/.github/workflows/job_depends.yml
+++ b/.github/workflows/job_depends.yml
@@ -9,10 +9,15 @@ jobs:
   build:
      runs-on: ubuntu-latest
      steps:
-       - name: step1
+       - name: step 1
+         continue-on-error: true
          run: |
-           echo "test step 1"
+           eo "test step 1"
            sleep 10
+       - name: step2
+         run: echo "step 2 run"
+       - name: step3
+         run: echo "step 3 run"
   test:
      runs-on: ubuntu-latest
      needs: build
@@ -23,7 +28,7 @@ jobs:
            sleep 10    
   test2:
      runs-on: ubuntu-latest
-     needs: build
+     needs: [ build, build2 ]
      steps:
        - name: step1
          run: |
@@ -38,6 +43,7 @@ jobs:
            sleep 10    
   deploy:
      runs-on: ubuntu-latest
+     if: ${{ always () }}
      steps:
        - name: step1
          run: |
